# planex

./: .dockerignore  .env  Jenkinsfile  README.md  backend.code-workspace  docker-compose.test.yml  docker-compose.yml  sonar-project.properties
backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py
backend/api/api_v1/: __init__.py  auth.py  board.py  maapi.py  messages.py  task.py  user.py
backend/auth/: utils.py
backend/core/: .env.template  config.py  database.py
backend/core/authentication/: transport.py  user_maneger.py
backend/core/gunicorn/: aplication.py  app_startup.py  logger.py
backend/core/models/: _.py  __init__.py  access_token.py  base.py  board.py  permision.py  task.py  user.py
backend/core/types/: user.py
backend/exceptions/: board_exc.py  task_exc.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_03_24_2223-98611bcf0e35_add_boards_users_tasks_permissions.py  2025_03_24_2231-1c92a970c173_make_users_name_optional.py  2025_05_02_2341-2df6db60fb2c_initial_schema.py  2025_05_05_1946-968839e8cc4b_add_task_cascade_delete.py  (+1 more)
backend/repository/: _repo.py  board.py  board_repo.py  permision.py  permision_repo.py  task.py  task_repo.py  user_repo.py
backend/schemas/: board_schema.py  permission_schema.py  task_schema.py  user.py
backend/services/: board_service.py  permision_service.py  task_service.py  user_service.py
backend/tests/: test_board_repo.py  test_main.py
backend/utils/: case_converter.py  create_superuser.py  reset_db.py
frontend/: index.html  (+2 more)
(+39 files in other folders)
