[project]
name = "planex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic[email]>=2.7.1",
    "pydantic-settings>=2.2.1",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "gunicorn>=23.0.0",
    "aiosmtplib>=3.0.2",
    "taskiq>=0.11.11",
    "taskiq-aio-pika>=0.4.1",
    "psycopg>=3.2.4",
    "psycopg-binary>=3.2.4",
    "pyjwt[crypto]==2.8.0",
    "fastapi-users[sqlalchemy]>=12.1.3",
    "setuptools>=75.8.0",
    "black>=25.1.0",
    "bcrypt==4.0.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.1",
]

[dependency-groups]
lint = [
    "black>=25.1.0",
]
